// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`withInfiniteScroll renders an empty list for the first render 1`] = `
<div>
  <div
    id="list"
  />
  <div
    className="bpk-sentinel"
  />
</div>
`;

exports[`withInfiniteScroll renders items after the first render 1`] = `
<WithInfiniteScroll
  dataSource={
    ArrayDataSource {
      "elements": Array [
        "Element 0",
        "Element 1",
        "Element 2",
        "Element 3",
        "Element 4",
      ],
      "listeners": Array [
        [Function],
      ],
    }
  }
  elementsPerScroll={5}
  onScroll={null}
  onScrollFinished={null}
  renderLoadingComponent={null}
  renderSeeMoreComponent={null}
  seeMoreAfter={null}
>
  <div>
    <List
      elements={
        Array [
          "Element 0",
          "Element 1",
          "Element 2",
          "Element 3",
          "Element 4",
        ]
      }
    >
      <div
        id="list"
      >
        <div
          key="Element 0"
        >
          Element 0
        </div>
        <div
          key="Element 1"
        >
          Element 1
        </div>
        <div
          key="Element 2"
        >
          Element 2
        </div>
        <div
          key="Element 3"
        >
          Element 3
        </div>
        <div
          key="Element 4"
        >
          Element 4
        </div>
      </div>
    </List>
    <div
      className="bpk-sentinel"
    />
  </div>
</WithInfiniteScroll>
`;

exports[`withInfiniteScroll should pass extra props to the decorated component 1`] = `
<WithInfiniteScroll
  aria-label="Test"
  dataSource={
    ArrayDataSource {
      "elements": Array [
        "Element 0",
        "Element 1",
        "Element 2",
        "Element 3",
        "Element 4",
      ],
      "listeners": Array [
        [Function],
      ],
    }
  }
  elementsPerScroll={5}
  onScroll={null}
  onScrollFinished={null}
  renderLoadingComponent={null}
  renderSeeMoreComponent={null}
  seeMoreAfter={null}
>
  <div>
    <List
      aria-label="Test"
      elements={Array []}
    >
      <div
        id="list"
      />
    </List>
    <div
      className="bpk-sentinel"
    />
  </div>
</WithInfiniteScroll>
`;

exports[`withInfiniteScroll should refresh data when data changes 1`] = `
<WithInfiniteScroll
  dataSource={
    ArrayDataSource {
      "elements": Array [
        "Element 0",
        "Element 1",
        "Element 2",
        "Element 3",
        "Element 4",
      ],
      "fetchItems": [Function],
      "listeners": Array [
        [Function],
      ],
    }
  }
  elementsPerScroll={5}
  onScroll={null}
  onScrollFinished={null}
  renderLoadingComponent={null}
  renderSeeMoreComponent={null}
  seeMoreAfter={null}
>
  <div>
    <List
      elements={Array []}
    >
      <div
        id="list"
      />
    </List>
    <div
      className="bpk-sentinel"
    />
  </div>
</WithInfiniteScroll>
`;

exports[`withInfiniteScroll should refresh data when data changes 2`] = `
<WithInfiniteScroll
  dataSource={
    ArrayDataSource {
      "elements": Array [
        1,
        2,
        3,
      ],
      "fetchItems": [Function],
      "listeners": Array [
        [Function],
      ],
    }
  }
  elementsPerScroll={5}
  onScroll={null}
  onScrollFinished={null}
  renderLoadingComponent={null}
  renderSeeMoreComponent={null}
  seeMoreAfter={null}
>
  <div>
    <List
      elements={Array []}
    >
      <div
        id="list"
      />
    </List>
    <div
      className="bpk-sentinel"
    />
  </div>
</WithInfiniteScroll>
`;

exports[`withInfiniteScroll should render correctly when no more elements 1`] = `
<WithInfiniteScroll
  dataSource={
    ArrayDataSource {
      "elements": Array [
        "Element 0",
        "Element 1",
        "Element 2",
        "Element 3",
        "Element 4",
      ],
      "listeners": Array [
        [Function],
      ],
    }
  }
  elementsPerScroll={5}
  onScroll={null}
  onScrollFinished={null}
  renderLoadingComponent={null}
  renderSeeMoreComponent={null}
  seeMoreAfter={null}
>
  <div>
    <List
      elements={
        Array [
          "Element 0",
          "Element 1",
          "Element 2",
          "Element 3",
          "Element 4",
        ]
      }
    >
      <div
        id="list"
      >
        <div
          key="Element 0"
        >
          Element 0
        </div>
        <div
          key="Element 1"
        >
          Element 1
        </div>
        <div
          key="Element 2"
        >
          Element 2
        </div>
        <div
          key="Element 3"
        >
          Element 3
        </div>
        <div
          key="Element 4"
        >
          Element 4
        </div>
      </div>
    </List>
  </div>
</WithInfiniteScroll>
`;

exports[`withInfiniteScroll should render correctly with a "renderLoadingComponent" attribute 1`] = `
<WithInfiniteScroll
  dataSource={
    ArrayDataSource {
      "elements": Array [
        "Element 0",
        "Element 1",
        "Element 2",
        "Element 3",
        "Element 4",
      ],
      "listeners": Array [
        [Function],
      ],
    }
  }
  elementsPerScroll={5}
  onScroll={null}
  onScrollFinished={null}
  renderLoadingComponent={[Function]}
  renderSeeMoreComponent={null}
  seeMoreAfter={null}
>
  <div>
    <List
      elements={Array []}
    >
      <div
        id="list"
      />
    </List>
    <div
      className={null}
    >
      <span>
        Loading
      </span>
    </div>
  </div>
</WithInfiniteScroll>
`;

exports[`withInfiniteScroll should render correctly with a "renderSeeMoreComponent" attribute 1`] = `
<WithInfiniteScroll
  dataSource={
    ArrayDataSource {
      "elements": Array [
        "Element 0",
        "Element 1",
        "Element 2",
        "Element 3",
        "Element 4",
      ],
      "listeners": Array [
        [Function],
      ],
    }
  }
  elementsPerScroll={1}
  onScroll={null}
  onScrollFinished={null}
  renderLoadingComponent={null}
  renderSeeMoreComponent={[Function]}
  seeMoreAfter={0}
>
  <div>
    <List
      elements={
        Array [
          "Element 0",
        ]
      }
    >
      <div
        id="list"
      >
        <div
          key="Element 0"
        >
          Element 0
        </div>
      </div>
    </List>
    <button
      onClick={[Function]}
      type="button"
    >
      see more
    </button>
  </div>
</WithInfiniteScroll>
`;

exports[`withInfiniteScroll should render correctly with an "elementsPerScroll" attribute 1`] = `
<WithInfiniteScroll
  dataSource={
    ArrayDataSource {
      "elements": Array [
        "Element 0",
        "Element 1",
        "Element 2",
        "Element 3",
        "Element 4",
      ],
      "listeners": Array [
        [Function],
      ],
    }
  }
  elementsPerScroll={1}
  onScroll={null}
  onScrollFinished={null}
  renderLoadingComponent={null}
  renderSeeMoreComponent={null}
  seeMoreAfter={null}
>
  <div>
    <List
      elements={
        Array [
          "Element 0",
        ]
      }
    >
      <div
        id="list"
      >
        <div
          key="Element 0"
        >
          Element 0
        </div>
      </div>
    </List>
    <div
      className="bpk-sentinel"
    />
  </div>
</WithInfiniteScroll>
`;
